
  22 Jun 2015; Justin Lecher <jlec@gentoo.org> lh-sources-4.0.5.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs release

  08 Jun 2015; Justin Lecher <jlec@gentoo.org> lh-sources-4.0.5.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs release and BFQ

*lh-sources-4.0.5 (07 Jun 2015)

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.5.ebuild,
  -lh-sources-4.0.4.ebuild:
  sys-kernel/lh-sources: Bump to latest genpatches and linux release

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sys-kernel/lh-sources: Add github to remote-id in metadata.xml

*lh-sources-4.0.4 (18 May 2015)

  18 May 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.4.ebuild,
  -lh-sources-4.0.3.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release

*lh-sources-4.0.3 (15 May 2015)

  15 May 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.3.ebuild,
  -lh-sources-4.0.2.ebuild:
  sys-kernel/lh-sources: Bump to latest genpatches and linux release

  11 May 2015; Justin Lecher <jlec@gentoo.org> lh-sources-4.0.2.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs release

*lh-sources-4.0.2 (10 May 2015)

  10 May 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.2.ebuild,
  -lh-sources-4.0.1.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release

*lh-sources-4.0.1 (04 May 2015)

  04 May 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.1.ebuild,
  -lh-sources-4.0.0.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release

  22 Apr 2015; Justin Lecher <jlec@gentoo.org> lh-sources-4.0.0.ebuild:
  sys-kernel/lh-sources: Fix for aufs4

*lh-sources-4.0.0 (22 Apr 2015)

  22 Apr 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.0.0.ebuild,
  -lh-sources-3.19.5.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release; fix
  aufs-util version

*lh-sources-3.19.5 (22 Apr 2015)
