@@ -2,11 +2,11 @@ DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r8-4.0.patch1 3340 SHA256 b
 DIST 0002-block-introduce-the-BFQ-v7r8-I-O-sched-for-4.0.patch1 224540 SHA256 f1389d30e08cc1fab638407289743d15efcde4dac63f9e3052b0df9c0880ef57 SHA512 46cb51684ca5fd9ba9460c8a62be22e99169de1b5e87ac47f9782f52123993de61fe9563ffec062a9b7c2024d08b1d5f57e09a09dbd7841faa3d149f346f5464 WHIRLPOOL 73a8bada7aa76aad5bfa8ec9e1ec3337df5fd07c102391af4870b160b3f2a3a3b8f3a85f58f74a27a13d9fa97f571414529174f0d58c4cd521f395dd2bfb3e16
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r8-for-4.0.0.patch1 42411 SHA256 fd7f55a254217e1b57558a6288cc2aab28f7c62d7d0b8db09b598382d5bce618 SHA512 879ab2364ae09993f8dcd17f3c44584967cf26d26f8376611a9eb7824cf78cadf4cdae58d18f3b493d0ec48395888f1ca1395563e52501dc79f559369c931371 WHIRLPOOL 8419001e5110d4f6a1d446ea4f42de3f9922dd857c6e0a4ac6a7d51087943a13a0ea569ee0ccd7b352668543624a79b8640c0847a1cf02f70ff6c71028f75650
 DIST README-v7r8-0.BFQ 24398 SHA256 d33a1b12e603e20691d4d40e9cabff6ca61eee9cf7b044ec8dd6fee19b7934b0 SHA512 7882797c79407c3adf62d445307eb0ab73137209dcffa2038269a9b94b38fe4a6a1769b843df371bf5562682f8834b1f13c0de3eb26f3e941fea4f834a0fb00f WHIRLPOOL bcff9995547351764263edd648e97824903623105f0bad706b5da5d9427e06d1b5c7502d8e3fed9cf34ece593f592fbd8f9c001ef522eb2ccb96b93b42c2f7b4
-DIST aufs-sources-4.0_p20150622.tar.xz 166624 SHA256 af28e0752a1f9c0edf34519b58ed4aaea9e3538a3041110061d1fa55e25acfca SHA512 c68c077bf399d188c72f8c2c6ca4ce634fa710b84296275529f1a8a20c3c923ca7d418cd564d66651b5dbc3544bc556f763a5c3687e3fede55e36b13223a2bec WHIRLPOOL e3590e5da82ae5252c1e318dd775d950a14c3ac0f6235552cef0943f304361299ed33731e7365f6ef586e02e7d23be5dfdc613b40f48a042655b2a110638ca3e
-DIST deblob-4.0 129952 SHA256 c3d8e9a9728d5c1fc11b1112f5343b14e46a8cf2880e10399a840bc94b6e2ad3 SHA512 055205394487dbc0022f9531fb76d0be51ca3ec4e119232cc0972790d1532c680e1367eb36a9f40529f0ab1d76f64240b1e8a07cb02d3605d594c06e3547f1bb WHIRLPOOL db32b66231e552ac6e3651152eb2b3212ef0863842cd352bd2f1b1080b9ea5543f1f7ed0e7958a9f4b115559233dc1817560e896c789378ea7b68b527b721ca8
-DIST deblob-check-4.0 670921 SHA256 042b511913187672d9a0512765e662ba5d4283812ebebf424f778eb08fa359bc SHA512 a27e3530cd3028041445cf8c5f49ad7827a7cf2b511de28851d2b09c28347cf2be667a7494bd698939c007fb77595699c1f61fb76249ae87658e1d12e855d2a1 WHIRLPOOL 953d8e6eed10971ed67a4573449b9a536ad693a2130153a6fc7cc9ea3e2daea21ca002c8df80126f7e318f75bec82c3f6e99fe43155817e2e2a52b5949dc5d2d
-DIST genpatches-4.0-7.base.tar.xz 159536 SHA256 9d1e84cb5133489f76aa3ee4ffdc6a28331bed0c6557e383bdf288ec9461ff3c SHA512 49f29bc5b8d0953431dbd1c2c0b5fa0ae0eaad6ed744cddc5e8eeb3a6dc7aeb2231d9f491149fd0e9a4a9c10bfd336746a0b544b96d9212bc401091ee586eb46 WHIRLPOOL 355dfcdf5eb508cd840e506b32f3a9a39ef885bfc605b271574cc906492ad7a82c3f3511bbc519a912c56ad2cd0ab11d51a45602f20b03bc6441a11adc53d9d1
-DIST genpatches-4.0-7.extras.tar.xz 16276 SHA256 911ccb197f2c9514d8b4eacbdb7c059d709f64cb97632eae85cda99d61596ba4 SHA512 ce94b88735fde37b1337f111c91da0610b14b22ce5ac68bb082170acf23b8875cc1d2e7bc8354959a91bcbf10dee9fdd81d0cd173e21e8bd8d6f2ba157a737d9 WHIRLPOOL b8d32b09e5b9ec7af8307398fef31f5569c738dfdfc1832060e998f9fb5baa31cbb84eadab28b82d50fb7e6acbb381c55271128de4c5bc14febbb7dc4b1d1534
+DIST aufs-sources-4.1_p20150629.tar.xz 166912 SHA256 b9927b15bfc6be7b72206529402b33ceb32b72fd36c84e28f34fb73218575cd0 SHA512 6514479c83e04fe22c7d753bc351e77e9d84cc012eb590e0e463f639bd1ac4dd5cecc0f5b6046d7f721a4a90b6f492e015faadc392af2664f4bcfa9a860bec56 WHIRLPOOL e68b9da85b2abc7b6b42777e23d49c93e550e2cdd330a140f4471888e0bab5dafb5cddf2b1263b12a74098ef3d817f3270b92898137948ae76152104db5d8621
+DIST deblob-4.1 130695 SHA256 2888a5a3b5e8e9ec242e4d702582fa1d739a1274fcd94643a9fb3516a210a8a7 SHA512 b861b9b53f9295e5e993784031ce57cf8cddc418184ec00c28ed92c9e7660406e0ede581a93d0def36e7847b8e068c8ca6c4dfdd65c15cb174d6c5803c16214a WHIRLPOOL b90f55dd8702eb254968ed7689b50859833ed362e9aa1720ade96aa1f6f84e8f90f5d1eee034c8535e8bf767c0b5f8b0bc559219e8d81d4c6ed53bd5cfe5e65e
+DIST deblob-check-4.1 674781 SHA256 54aa33e23a31ead6f982b830be86003c306b88f0d0a9f96c7dc66fe7cd274acb SHA512 51fe9d70d723992aaf70f8bfcfcc12ecfedd7a039402ddae07858fb087693b00cd80d1e0e1a5053e049f2a2b8c58ed23e4598e2dae902c4999999c08bc2eeb33 WHIRLPOOL d2c22280e12863793f8e866b126be53ee10d564373addfe9399b2afe22dd7584513c050f334ea08e6d63dd27a1574f2754456bad9d0a42e8c8d9995eec27aed0
+DIST genpatches-4.1-3.base.tar.xz 4096 SHA256 d7dfb397945d8f0b505b0759dc7db39784568f8eabdd56549070569ec34c31a9 SHA512 6b7954af6dbc38a7655ea9f50f72f4024c634b8d0df88e780ec8079058ca5b7450dde66fe7ba6ebdbd22859f22647d47fa2033d4adc9ff65d598addfa36e6a7f WHIRLPOOL 73c781f414141d772d1e6bae52d213bff60971f0e7e9f6b931776ec63eeb68bffd812ac87018bb6f3bb9c9ec3c92b8ffae67141c146c05b391a967d587f3b7fa
+DIST genpatches-4.1-3.extras.tar.xz 16176 SHA256 f29b92fa9e7f3c3a1081b86227b9daec3d932610f2c6a4d8ecd8218dcda190d7 SHA512 b1e61b9fe7303752643cfed0717c74fe953855bf2f2d019ff95d83f08a5e4f9b00ce5a8cf72d48fa6716abcec3a8476b003cf6c6b25a04b6b47a8505faca182e WHIRLPOOL b3797a12878a55331740c55f483f6ec69e6180a52dc3dbc227b3c68bfefcbeccc702cbafce3d6e3b0ce09d82f43d91b4bdd0d8ae51f6edaefcc6dc1d6d21987b
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-aab465c93f3c91adf5a2560d84580db662f9fa1c.patch 16963 SHA256 ca7e13dc12f16418397e2d855a66f08605a4aeaf229624d25f1e5a564db60165 SHA512 5f19e1dd032f78dd2bf479e96c65167044e9c78955849f90d8586fb3f1e5dc7b645129c8748ea8ffa116a653d0683876b4533a1c23e0a1015b44067c007e788a WHIRLPOOL c1479f3a4b3170fc1e00bc2b9678278ae6757c0ef3743ce161aa462efb070786464702d53016c540d5bf3dc48710e3dbe2516a2b7a10c6c3e6f177156c6d80e2
-DIST linux-4.0.tar.xz 82313052 SHA256 0f2f7d44979bc8f71c4fc5d3308c03499c26a824dd311fdf6eef4dee0d7d5991 SHA512 ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f130c59177a2fe4793b7dc399481bf10d3556d1d571616000f180304e5a995 WHIRLPOOL c481256e23dc82209942d4f2fc9a94aa7fc4c3c69b05eaa041a58ca4bdc5781274ec4c49d597ccf94b634d61418ec578d20a6569c6c7052b4d3cf33611c99001
+DIST linux-4.1.tar.xz 83017828 SHA256 caf51f085aac1e1cea4d00dbbf3093ead07b551fc07b31b2a989c05f8ea72d9f SHA512 168ef84a4e67619f9f53f3574e438542a5747f9b43443363cb83597fcdac9f40d201625c66e375a23226745eaada9176eb006ca023613cec089349e91751f3c0 WHIRLPOOL 85fcfdb67ea7f865272a85d3b4c3ec1f5a1267f4664bf073c562bb3875e9d96ad68486259d8866a9aced98c95de16840ec531d89745aec75b7315a64ebe650b8
