@@ -1,4 +1,10 @@
 
+*lh-sources-4.1.0 (29 Jun 2015)
+
+  29 Jun 2015; Justin Lecher <jlec@gentoo.org> +lh-sources-4.1.0.ebuild,
+  -lh-sources-4.0.5.ebuild:
+  sys-kernel/lh-sources: Bump to latest aufs, genpatches and linux release
+
   22 Jun 2015; Justin Lecher <jlec@gentoo.org> lh-sources-4.0.5.ebuild:
   sys-kernel/lh-sources: Bump to latest aufs release
 
